--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   
         "scripts": {
-      "start": "ng serve --port 5000",
+      "dev": "ng serve --port 5000",
       "test": "echo \"Error: no test specified\" && exit 1"
     },
     
