--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.6",
+    "heatmap.js": "^2.0.5",
     "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
