--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,15 +1,9 @@
 {
-    "builds": [
-      {
-        "src": "package.json",
-        "use": "@vercel/static-build",
-        "config": {
-          "distDir": "dist"
-        }
-      }
-    ],
+    "version": 2,
+    "public": true,
+    "outputDirectory": "src",
     "routes": [
-      { "src": "/(.*)", "dest": "/" }
+      { "src": "/(.*)", "dest": "/index.html" }
     ]
   }
   
