--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -3,7 +3,14 @@
     "public": true,
     "outputDirectory": "src",
     "routes": [
-      { "src": "/(.*)", "dest": "/index.html" }
+      {
+        "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|otf|json|txt))",
+        "headers": { "cache-control": "public, max-age=31536000, immutable" },
+        "dest": "/$1"
+      },
+      {
+        "src": "/(.*)",
+        "dest": "/index.html"
+      }
     ]
   }
-  
