--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,16 +1,41 @@
 {
-    "version": 2,
-    "public": true,
-    "outputDirectory": "src",
-    "routes": [
-      {
-        "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|svg|ico|woff|woff2|ttf|eot|otf|json|txt))",
-        "headers": { "cache-control": "public, max-age=31536000, immutable" },
-        "dest": "/$1"
-      },
-      {
-        "src": "/(.*)",
-        "dest": "/index.html"
-      }
-    ]
-  }
+  "version": 2,
+  "public": true,
+  "outputDirectory": "src",
+  "builds": [
+    {
+      "src": "src/**",
+      "use": "@vercel/static"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/services/(.*)",
+      "dest": "/src/services/$1"
+    },
+    {
+      "src": "/components/(.*)",
+      "dest": "/src/components/$1"
+    },
+    {
+      "src": "/views/(.*)",
+      "dest": "/src/views/$1"
+    },
+    {
+      "src": "/factories/(.*)",
+      "dest": "/src/factories/$1"
+    },
+    {
+      "src": "/routes/(.*)",
+      "dest": "/src/routes/$1"
+    },
+    {
+      "src": "/(.*\\.(js|css|png|jpg|jpeg|gif|ico|html|json))",
+      "dest": "/src/$1"
+    },
+    {
+      "src": "/(.*)",
+      "dest": "/src/index.html"
+    }
+  ]
+}
